--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "lefthook": "1.10.10",
         "react": "19.0.0",
         "react-dom": "19.0.0",
+        "react-hook-form": "^7.56.3",
         "react-redux": "9.2.0",
         "react-router": "7.1.5",
         "react-router-dom": "^7.5.2",
