--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@chakra-ui/react": "2.8.2",
         "@emotion/react": "11.14.0",
         "@emotion/styled": "11.14.0",
+        "@hookform/resolvers": "^5.0.1",
         "@reduxjs/toolkit": "2.5.1",
         "framer-motion": "12.0.0",
         "lefthook": "1.10.10",
@@ -32,7 +33,8 @@
         "react-redux": "9.2.0",
         "react-router": "7.1.5",
         "react-router-dom": "^7.5.2",
-        "swiper": "^11.2.6"
+        "swiper": "^11.2.6",
+        "yup": "^1.6.1"
     },
     "devDependencies": {
         "@arkweid/lefthook": "0.7.7",
