--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "react-redux": "9.2.0",
         "react-router": "7.1.5",
         "react-router-dom": "^7.5.2",
+        "react-use-measure": "^2.1.7",
         "swiper": "^11.2.6",
         "yup": "^1.6.1"
     },
