--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "lefthook": "1.10.10",
         "react": "19.0.0",
         "react-dom": "19.0.0",
+        "react-dropzone": "^14.3.8",
         "react-hook-form": "^7.56.3",
         "react-redux": "9.2.0",
         "react-router": "7.1.5",
