--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "scripts": {
         "start": "vite",
         "build": "vite build",
+        "deploy": "yarn build && gh-pages -d dist",
         "preview": "vite preview",
         "lint:styles": "arui-presets-lint styles",
         "lint:scripts": "arui-presets-lint scripts",
@@ -56,6 +57,7 @@
         "eslint-plugin-prettier": "5.2.3",
         "eslint-plugin-react-refresh": "0.4.18",
         "eslint-plugin-simple-import-sort": "12.1.1",
+        "gh-pages": "^6.3.0",
         "globals": "15.14.0",
         "mochawesome": "7.1.3",
         "start-server-and-test": "2.0.10",
