docs(config): change config to deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "yee-daa-api",
+    "homepage": "https://Nesmeian.github.io/yee-daa-api/",
     "private": true,
     "version": "0.0.0",
     "scripts": {
